--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I am a CS graduate student at UMass Amherst, currently in my second semester. I am interested Machine Learning and NLP, and their application to solve real world problems. 
+	    			I am a CS graduate student at UMass Amherst, currently in my second year. I am interested Machine Learning and NLP, and their application to solve real world problems. 
 
 	    			<br><br> 
 	    			
-	    			I am presently working on a project under <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://meta.com/"> Meta</a>. I am also the grader for <i>CS311: Introduction to Algorithms </i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+				I am presently interning as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair, Inc.</a> located in Boston.
+	    			I have previously previously worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Shankar Vembu</a>. I also grade the course <i>CS311: Introduction to Algorithms </i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
