--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	    			<br><br> 
 	    			
 				I am presently interning as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair, Inc.</a> located in Boston.
-	    			I have previously previously worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Shankar Vembu</a>. I also grade the course <i>CS311: Introduction to Algorithms </i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+	    			I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Shankar Vembu</a>. I also grade the course <i>CS311: Introduction to Algorithms </i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
@@ -42,7 +42,7 @@
 	    			These are my <a href="projects.html">projects</a> which you can take a look at. Besides all of this, I am an avid programmer and I take part in competitive coding regularly. You can stalk me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. And oh, I make a lot of bad puns and memes! Check them out <a href="">here</a>.
 
 	    			<br><br>
-	    			You can get in touch with me on <a href="https://www.facebook.com/akul.swamy">Facebook</a>, <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a> or  just shoot me an <a href = "mailto:akuls008@gmail.com">email</a>. 
+	    			You can get in touch with me on <a href="https://www.facebook.com/akul.swamy">Facebook</a>, <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a> or  just send me an <a href = "mailto:akuls008@gmail.com">email</a>. 
 	    		</p>
     		</div>
 		</div>
