--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	    			<br><br> 
 	    			
 				I am presently interning as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair, Inc.</a> located in Boston.
-	    			I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Shankar Vembu</a>. I also grade the course <i>CS311: Introduction to Algorithms </i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+	    			I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Mr. Shankar Vembu</a>. I also grade the course <i>CS311: Introduction to Algorithms </i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
