--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		
 		<div class="container">
     		<div class="main_page_left">
-        		<img src = "images/self.jpg" width="65%" height="65%"><br>
+        		<img src = "images/self_3.jpg" width="65%" height="65%"><br>
 				<p1><i>Website last updated on 22-May-2017</i></p1>
     		</div>
     		<div class="main_page_right">
