Adding the NLP report and poster links

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     		<div class="col_2_lt">
     			<h2>GRADUATE</h2>
         		<p>
-        			<b class="sub_heading">Cricket score adjustment using ML</b>
+        			<b class="sub_heading">Cricket score adjustment using Machine Learning</b>
 	    			<br>
 	    			<i>Mar 2017 - Apr 2017</i>
 	    			<br><br>
@@ -55,7 +55,7 @@
 	    			<br>
 	    			<i>Oct 2016 - Dec 2016</i>
 	    			<br><br>
-	    			This project involves the suggestion of appropriate infobox templates to Wikipedia articles. Given a Wikipedia article, we try to answer two questions: Does a page require an infobox? If yes, what is the appropriate infobox to use for this page? We cast these questions as classification tasks and use <a href="https://en.wikipedia.org/wiki/Support_vector_machine">linear SVMs</a>, <a href="https://en.wikipedia.org/wiki/Decision_tree_learning">Decision Trees</a> and <a href="https://en.wikipedia.org/wiki/Random_forest">Random Forests</a> in our solutions. Other tools we are using include spaCy and scikit-learn. 
+	    			This project involves the suggestion of appropriate infobox templates to Wikipedia articles. Given a Wikipedia article, we try to answer two questions: Does a page require an infobox? If yes, what is the appropriate infobox to use for this page? We cast these questions as classification tasks and use <a href="https://en.wikipedia.org/wiki/Support_vector_machine">linear SVMs</a>, <a href="https://en.wikipedia.org/wiki/Decision_tree_learning">Decision Trees</a> and <a href="https://en.wikipedia.org/wiki/Random_forest">Random Forests</a> in our solutions. Other tools we are using include spaCy and scikit-learn. You can find a brief poster <a href="https://www.dropbox.com/s/utnp9qew76g8vwg/COMPSCI585-Poster.pdf?dl=0">here</a> and a detailed report <a href="https://www.dropbox.com/s/t4n8n00uu2uegcy/COMPSCI585-Report.pdf?dl=0">here</a>.
 
 	    		</p>
     		</div>
