--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript">
 			function getTime()
 			{
+				alert("Yo");
 				Ddocument.getElementById("time").innerHTML = (new Date).getTime();
 			}
 		</script>
