--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<script type="text/javascript">
 			function getTime()
 			{
-				alert("Yo");
-				Ddocument.getElementById("time").innerHTML = (new Date).getTime();
+				while(1)
+				{
+					document.getElementById("time").innerHTML = (new Date).getTime();
+				}
 			}
 		</script>
 	</head>
