--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript">
 			function getTime()
 			{
-				// document.getElementById("time").innerHTML = (new Date).getTime();
+				document.getElementById("time").innerHTML = (new Date).getTime();
 			}
 		</script>
 	</head>
