--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			}
 		</script>
 	</head>
-	<body onload = "getTime()">
+	<body>
 		<h1><a href="http://akuls.github.io">Akul Siddalingaswamy</a></h1>
 		<nav>
 			<ul>
