--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 		<title>Home</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<script type="text/javascript">
-			function getTime()
-			{
-				document.getElementById("time").innerHTML = (new Date).getTime();
-			}
 		</script>
 	</head>
 	<body>
@@ -28,7 +24,7 @@
 		<div class="container">
     		<div class="main_page_left">
         		<img src = "images/self_3.jpg" width="65%" height="65%"><br>
-				Current time: <p1 id="time"></p1>
+				Current time: <p1 id="time">12345</p1>
     		</div>
     		<div class="main_page_right">
 	    		<p> 
