--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 	    			<br><br>
 
-	    			I have previously worked at <a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> as a Software Engineer. I was a part of the Production Support Organization, where I worked on developing an Intelligent Capacity Management System and thus aid proactive decision making.
+	    			I have previously worked at <a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> as a Software Engineer. I was a part of the Production Support Organization, where I worked on developing an Intelligent Capacity Management System and thus aid proactive decision making in Infrastructure allocation/de-allocation.
 
 	    			<br><br>
 
-	    			These are my <a href="projects.html">projects</a> which you can take a look at. Besides all of this, I am an avid programmer and I take part in competitive coding regularly. You can stalk me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. And oh, I make a lot of bad puns and memes! Check them out <a href="">here</a>.
+	    			These are my <a href="projects.html">projects</a> which you can take a look at. Besides all of this, I am an avid programmer and I take part in competitive programming contests regularly. You can stalk me on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. And oh, I make a lot of bad puns and memes! Check them out <a href="">here</a>.
 
 	    			<br><br>
 	    			You can get in touch with me on <a href="https://www.facebook.com/akul.swamy">Facebook</a>, <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a> or  just send me an <a href = "mailto:akuls008@gmail.com">email</a>. 
