--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<script type="text/javascript">
 			function getTime()
 			{
-				alert("Yo");
 				document.getElementById("time").innerHTML = (new Date()).getTime();
 				setTimeout("getTime()", 1000);
 			}
@@ -30,7 +29,7 @@
 		<div class="container">
     		<div class="main_page_left">
         		<img src = "images/self_3.jpg" width="65%" height="65%"><br>
-				Current time: <p1 id="time"></p1>
+				<h3 id="time"></h3>
     		</div>
     		<div class="main_page_right">
 	    		<p> 
