About and projects

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
 	    			<br>
 	    			<i>Feb 2017 - Apr 2017</i>
 	    			<br><br>
-	    			The task involves identifying and extracting elements from the PDF file including title, abstract, authors, affiliations, and references. We will leverage existing PDF parsing technology that provides detailed information about the text and formatting of the manuscript. We then employ <a href="https://en.wikipedia.org/wiki/Conditional_random_field">CRFs</a> and Neural Nets to accurately label and extract the metadata to allow further downstream processing.
+	    			The task involves identifying and extracting elements from the PDF file including title, abstract, authors, affiliations, and references. We will leverage existing PDF parsing technology that provides detailed information about the text and formatting of the manuscript. We used Logistic Regression to estabilish a baseline. Next, we used a Multi-layer perceptron and a Bi-LSTM to improve on this baseline to achieve an accuracy of 0.92.
 
 	    			<br><br>
 
