--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
 	    			Computer Science (GPA: 4.0/4.0)
 	    			<br>
 	    			<a href="https://www.cics.umass.edu/">UMass Amherst</a> | Sep 2016 - Present<br>
-	    			<a href="https://www.cics.umass.edu/content/fall-16-course-descriptions/#611"> AA 611</a>, <a href="https://www.cics.umass.edu/content/fall-16-course-descriptions/#585">NLP 585</a>, 
-				<a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#589">ML 589</a>, <a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#645">DB 645</a>, 
-				<a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#696MA"> IS 696MA</a>, <a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#590R">App-IR 590R</a>,
-				<a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#697L">DL 697L</a>, <a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#653">N/W 653</a>
+	    			<a href="https://www.cics.umass.edu/content/fall-16-course-descriptions/#611"> Advanced Algorithms</a>, <a href="https://www.cics.umass.edu/content/fall-16-course-descriptions/#585">NLP</a>, 
+				<a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#589">Machine Learning</a>, <a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#645">Advanced Databases</a>, 
+				<a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#696MA"> IS 696MA</a>, <a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#590R">Applied IR</a>,
+				<a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#682">Neural Networks</a>, <a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#590S">Systems for Data Science</a>
 	    			<br><br>
 
 	    			<b class="sub_heading">Bachelor of Engineering</b>
