About and projects

--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
 	    			<br><br>
 	    			Developed a Process Scheduler for a single processor environment.
 	    			Heuristic search was used to find optimal and near-optimal solutions.
-					A Genetic Algorithms based search using natural selection was used to improve the efficiency over certain generations.
+					A Genetic Algorithms based search using natural selection. Natural genetics was used to improve the efficiency over certain generations.
 					Technologies used: C/C++.
 	    			<br><br>
 	    		</p>
