--- a/about.html
+++ b/about.html
@@ -71,6 +71,14 @@
     		<div class="col_2_rt">
 	    		<h2>EXPERIENCE</h2>
         		<p>
+        			<b class="sub_heading">Software Engineer (Intern)</b>
+	    			<br>
+	    			Recommendation Services 
+	    			<br>
+	    			<a href="https://www.wayfair.com/">Wayfair</a> | June 2017 - Aug 2017
+	    			
+	    			<br><br><br>
+
 	    			<b class="sub_heading">Software Engineer</b>
 	    			<br>
 	    			Production Support 
