--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I am a CS graduate student at UMass Amherst, currently in my second year. I am interested Machine Learning and NLP, and their application to solve real world problems. 
+	    			I am a CS graduate student at UMass Amherst, currently in my final semester. I am interested Machine Learning and NLP, and their application to solve real world problems. 
 
 	    			<br><br> 
 	    			
-				I am presently interning as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair, Inc.</a> located in Boston.
-	    			I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Mr. Shankar Vembu</a>. I also grade the course <i>CS311: Introduction to Algorithms </i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+				I interned as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair, Inc.</a> last summer located in Boston.
+	    			I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Mr. Shankar Vembu</a>. I also grade the course <i>CS611: Advanced Algorithms </i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
@@ -49,7 +49,7 @@
 	    			These are my <a href="projects.html">projects</a> which you can take a look at. Besides all of this, I am an avid programmer and I take part in competitive programming contests regularly. You can stalk me on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. And oh, I make a lot of bad puns and memes! Check them out <a href="">here</a>.
 
 	    			<br><br>
-	    			You can get in touch with me on <a href="https://www.facebook.com/akul.swamy">Facebook</a>, <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a> or  just send me an <a href = "mailto:akuls008@gmail.com">email</a>. 
+	    			You can get in touch with me on <a href="https://www.facebook.com/akul.swamy">Facebook</a>, <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a> or just send me an <a href = "mailto:akuls008@gmail.com">email</a>. 
 	    		</p>
     		</div>
 		</div>
