--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
 
 		<div class="container">
 
-			<h2>Coming soon...</h2>
+			<h2>Visit <a href="https://akulsblog.wordpress.com/author/akulswamy/"> here </a>!</h2>
 
 			<p>
 
