--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I am a CS graduate student at UMass Amherst, currently in my final semester. I am interested Machine Learning and NLP, and their application to solve real world problems. 
-
+	    			I am currently working as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair, Inc.</a> in Boston. I work on the recommendations team, specifically product recommendations. My work entails using intelligence business logic and Data Science models to provide reliable recommendations to the users, thereby enhancing their online shopping experience. 
 	    			<br><br> 
 	    			
-				I interned as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair, Inc.</a> last summer located in Boston.
-	    			I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Mr. Shankar Vembu</a>. I also grade the course <i>CS611: Advanced Algorithms </i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+	    			I graduated with a Master's in Computer Science from UMass Amherst in May 2018. During my time there, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Mr. Shankar Vembu</a>. I was also the TA for the courses of <i>CS611: Advanced Algorithms </i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
-	    			I have previously worked at <a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> as a Software Engineer. I was a part of the Production Support Organization, where I worked on developing an Intelligent Capacity Management System and thus aid proactive decision making in Infrastructure allocation/de-allocation.
+	    			I have previously worked at <a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> as a Software Engineer. I was a part of the Production Support Platform. here, I worked on building an Intelligent Capacity Management System, and thereby aid proactive decision making in Infrastructure allocation/de-allocation.
 
 	    			<br><br>
 
