Added some stuff

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<h2>Learn quickly, unlearn smartly!</h2>
 			<p>
-				I'm a <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a>an born and bred. The <i>Garden City</i> as it is famously known, has also become the Silicon Valley of India. Starting from my schooling, college and all the way up to the corporate life, I have spent 23 years of my life in this city, and I love it. My hobbies include competitive coding, playing badminton and trekking/hiking. I am an Internationally Certified Handwriting Analyst from <a href="http://handwritingindia.com/">Handwriting Institute India</a>. You can read more about all these <a href="blog.html">here</a>.
+				I'm a <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a>an born and bred. The <i>Garden City</i> as it is famously known, has also become the Silicon Valley of India. Starting from my schooling, college and all the way up to the corporate life, I have spent 23 years of my life in this city, and I love it. My hobbies include competitive programming, playing badminton and trekking/hiking. I am an Internationally Certified Handwriting Analyst from <a href="http://handwritingindia.com/">Handwriting Institute India</a>. You can read more about all these <a href="blog.html">here</a>.
 			</p>
     		<div class="col_2_lt">
     			<h2>EDUCATION</h2>
