--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 	    			I am currently working as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair, Inc.</a> in Boston. I work on the recommendations team, specifically product recommendations. My work entails using intelligent business logic and Data Science models to provide reliable recommendations to the users, thereby enhancing their online shopping experience. 
 	    			<br><br> 
 	    			
-	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time there, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Mr. Shankar Vembu</a>. I was also the TA for the courses of <i>CS611: Advanced Algorithms </i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time there, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Mr. Shankar Vembu</a>. I was also the TA for the courses of <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
-	    			I have previously worked at <a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> as a Software Engineer. I was a part of the Production Support Platform. here, I worked on building an Intelligent Capacity Management System, and thereby aid proactive decision making in Infrastructure allocation/de-allocation.
+	    			I previously worked at <a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> as a Software Engineer, on the Production Support team. Here, I worked on building an Intelligent Capacity Management System, and thereby aid proactive decision making in Infrastructure allocation/de-allocation, to accomodate for the peak/dip in requests.
 
 	    			<br><br>
 
-	    			These are my <a href="projects.html">projects</a> which you can take a look at. Besides all of this, I am an avid programmer and I take part in competitive programming contests regularly. You can stalk me on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. And oh, I make a lot of bad puns and memes! Check them out <a href="">here</a>.
+	    			These are my <a href="projects.html">projects</a> which you can take a look at. Besides these, I am an avidcompetitive programmer. You can stalk me on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. And oh, I make a lot of bad puns and memes! Check them out <a href="">here</a>.
 
 	    			<br><br>
 	    			You can get in touch with me on <a href="https://www.facebook.com/akul.swamy">Facebook</a>, <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a> or just send me an <a href = "mailto:akuls008@gmail.com">email</a>. 
