Changed blog page and removed fb from about

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	    			These are my <a href="projects.html">projects</a> which you can take a look at. Besides these, I am an avidcompetitive programmer. You can stalk me on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. And oh, I make a lot of bad puns and memes! Check them out <a href="">here</a>.
 
 	    			<br><br>
-	    			You can get in touch with me on <a href="https://www.facebook.com/akul.swamy">Facebook</a>, <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a> or just send me an <a href = "mailto:akuls008@gmail.com">email</a>. 
+	    			You can get in touch with me on  <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a> or just send me an <a href = "mailto:akul911@gmail.com">email</a>. 
 	    		</p>
     		</div>
 		</div>
