--- a/blog.html
+++ b/blog.html
@@ -41,25 +41,15 @@
 		
 
 		<div class="container">
-
-			<h2>Visit <a href="https://akulsblog.wordpress.com/author/akulswamy/"> here</a>!</h2>
-
-			<p>
-
-			
-			</p>
-
-    		<div class="col_2_lt">
-
-    			
-
-    		</div>
-
-    		<div class="col_2_rt">
-
-	    		
-
-    		</div>
+			<ul>
+				<li> 
+					<p>I like to travel a lot and also try out different restaurants. I review those after, and you can follow me here if you're interested.</p>
+					<a title="View Akul S's food journey on Zomato!" href="https://www.zomato.com/users/akul-s-4500871"><img alt="View my food journey on Zomato!" src="https://www.zomato.com/widgets/user_widget_img.php?user_id=4500871" width="215"></a>
+				</li>
+				<li>
+					I also try to write about the places I visit and/or things on my mind. Check them out <a href="https://akulsblog.wordpress.com/author/akulswamy/"> here</a>!
+				</li>
+			</ul>
 
 		</div>
 
