Made some changes

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Being revamped. Coming soon.</title>
+		<title>Projects</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
@@ -15,5 +15,9 @@
 	    		<li><a href="blog.html">Blog</a>&nbsp</li>
 			</ul>
 		</nav>
+
+		<div class="container">
+			<h2>Being revamped. Coming soon.</h2>
+		</div>
 	</body>
 </html>
