--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
 		<br><br>
 		
 		<div class="container">
-			<h2>Learn quickly, unlearn smartly!</h2>
+			<h2>Background</h2>
 			<p>
-				I'm a <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a>an born and bred. The <i>Garden City</i> as it is famously known, has also become the Silicon Valley of India. Starting from my schooling, college and all the way up to the corporate life, I have spent 23 years of my life in this city, and I love it. My hobbies include competitive programming, playing badminton and trekking/hiking. I am an Internationally Certified Handwriting Analyst from <a href="http://handwritingindia.com/">Handwriting Institute India</a>. You can read more about all these <a href="blog.html">here</a>.
+				I'm a <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a>an born and bred. I spent the first 23 years of my life in this city, and I love it. I enjoy cooking, running, competitive programming, badminton, and trekking/hiking. I am an Internationally Certified Handwriting Analyst from <a href="http://handwritingindia.com/">Handwriting Institute India</a>. You can download my CV <a href="https://drive.google.com/file/d/1hPQT6EWbNPqSTeTI7X0A6xtDRb_x0WoX/view?usp=sharing">here</a>.
 			</p>
     		<div class="col_2_lt">
     			<h2>EDUCATION</h2>
@@ -35,7 +35,7 @@
 	    			<a href="https://www.cics.umass.edu/content/fall-16-course-descriptions/#611"> Advanced Algorithms</a>, <a href="https://www.cics.umass.edu/content/fall-16-course-descriptions/#585">NLP</a>, 
 				<a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#589">Machine Learning</a>, <a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#645">Advanced Databases</a>, 
 				<a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#696MA"> IS 696MA</a>, <a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#590R">Applied IR</a>,
-				<a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#682">Neural Networks</a>, <a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#590S">Systems for Data Science</a>, 
+				<a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#682">Neural Networks</a>, <a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#590S">Systems for Data Science</a> 
 	    			<br><br>
 
 	    			<b class="sub_heading">Bachelor of Engineering</b>
@@ -76,14 +76,6 @@
 	    			Recommendation Systems 
 	    			<br>
 	    			<a href="https://www.wayfair.com/">Wayfair</a> | July 2018 - Present
-	    			
-	    			<br><br><br>
-
-        			<b class="sub_heading">Software Engineering Intern</b>
-	    			<br>
-	    			Recommendation Systems 
-	    			<br>
-	    			<a href="https://www.wayfair.com/">Wayfair</a> | June 2017 - Aug 2017
 	    			
 	    			<br><br><br>
 
