--- a/about.html
+++ b/about.html
@@ -31,11 +31,7 @@
 	    			<br>
 	    			Computer Science (GPA: 4.0/4.0)
 	    			<br>
-	    			<a href="https://www.cics.umass.edu/">UMass Amherst</a> | Sep 2016 - May 2018<br>
-	    			<a href="https://www.cics.umass.edu/content/fall-16-course-descriptions/#611"> Advanced Algorithms</a>, <a href="https://www.cics.umass.edu/content/fall-16-course-descriptions/#585">NLP</a>, 
-				<a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#589">Machine Learning</a>, <a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#645">Advanced Databases</a>, 
-				<a href="https://www.cics.umass.edu/content/spring-17-course-descriptions/#696MA"> IS 696MA</a>, <a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#590R">Applied IR</a>,
-				<a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#682">Neural Networks</a>, <a href="https://www.cics.umass.edu/content/fall-17-course-descriptions/#590S">Systems for Data Science</a> 
+	    			<a href="https://www.cics.umass.edu/">UMass Amherst</a> | Sep 2016 - May 2018
 	    			<br><br>
 
 	    			<b class="sub_heading">Bachelor of Engineering</b>
