--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 	        	<li><a href="about.html">About</a>&nbsp</li>
 	        	<li><a href="projects.html">Projects</a>&nbsp</li>
 	        	<li><a href="programming.html">Programming</a>&nbsp</li>
-	    		<li><a href="blog.html">Blog</a>&nbsp</li>
+	    		<li><a href="misc.html">Misc</a>&nbsp</li>
 			</ul>
 		</nav>
 		
@@ -38,7 +38,7 @@
 	    			<br>
 	    			Information Science (GPA: 9.53/10.0)
 	    			<br>
-	    			<a href="http://www.rvce.edu.in/">RVCE</a>, Bangalore, India | Sep 2011 - Jun 2015
+	    			<a href="http://www.rvce.edu.in/">RVCE</a> | Sep 2011 - Jun 2015
 	    		</p>
 	    		
 	    		<br>
