--- a/misc.html
+++ b/misc.html
@@ -26,7 +26,7 @@
 
 	        	<li><a href="programming.html">Programming</a>&nbsp</li>
 
-	    		<li><a href="blog.html">Blog</a>&nbsp</li>
+	    		<li><a href="misc.html">Misc</a>&nbsp</li>
 
 			</ul>
 
