--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	        	<li><a href="about.html">About</a>&nbsp</li>
 	        	<li><a href="projects.html">Projects</a>&nbsp</li>
 	        	<li><a href="programming.html">Programming</a>&nbsp</li>
-	    		<li><a href="blog.html">Blog</a>&nbsp</li>
+	    		<li><a href="misc.html">Misc</a>&nbsp</li>
 			</ul>
 		</nav>
 		
