--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,82 @@
 	    		<li><a href="misc.html">Misc</a>&nbsp</li>
 			</ul>
 		</nav>
+		<br><br>
 
 		<div class="container">
-			<h2>Being revamped. Coming soon.</h2>
+			<div class="col_2_lt">
+    			<h2>EDUCATION</h2>
+        		<p>
+	    			<b class="sub_heading">Master of Science</b>
+	    			<br>
+	    			Computer Science (GPA: 4.0/4.0)
+	    			<br>
+	    			<a href="https://www.cics.umass.edu/">UMass Amherst</a> | Sep 2016 - May 2018
+	    			<br><br>
+
+	    			<b class="sub_heading">Bachelor of Engineering</b>
+	    			<br>
+	    			Information Science (GPA: 9.53/10.0)
+	    			<br>
+	    			<a href="http://www.rvce.edu.in/">RVCE</a> | Sep 2011 - Jun 2015
+	    		</p>
+	    		
+	    		<br>
+
+	    		<h2>AWARDS</h2>
+        		<p>
+	    			<b class="sub_heading">Gold Medalist</b>
+	    			<br>
+	    			<a href="http://www.rvce.edu.in/">RVCE</a>, Bangalore, India | 2015
+	    			<br>
+	 				Top of the graduating class with a GPA of 9.53/10.0
+
+	    			<br><br>
+
+	    			<b class="sub_heading">MHRD Scholarship</b>
+	    			<br>
+	    			<a href="http://mhrd.gov.in/">MHRD</a>, Bangalore, India | 2011-2015
+
+	    			<br><br>
+
+	    			<b class="sub_heading">Certified Handwriting Analyst</b>
+	    			<br>
+	    			<a href="http://handwritingindia.com/">HII</a>, Bangalore, India | 2010
+	    		</p>
+    		</div>
+    		<div class="col_2_rt">
+	    		<h2>EXPERIENCE</h2>
+        		<p>
+        			<b class="sub_heading">Software Engineer</b>
+	    			<br>
+	    			Recommendation Systems 
+	    			<br>
+	    			<a href="https://www.wayfair.com/">Wayfair</a> | July 2018 - Present
+	    			
+	    			<br><br><br>
+
+	    			<b class="sub_heading">Software Engineer</b>
+	    			<br>
+	    			Production Support 
+	    			<br>
+	    			<a href="http://www.cisco.com/c/en/us/index.html">Cisco Sytems</a> | Jul 2015 - Jul 2016
+	    		</p>
+
+	    		<br>
+
+	    		<h2>ORGANIZATIONS</h2>
+        		<p>
+	    			<b class="sub_heading">The Ugly Indian</b>
+	    			<br>
+	    			Actively trying to induce some civic sense into people since 2015 through <a href="http://www.theuglyindian.com/">this</a> organization.
+
+	    			<br><br><br>
+
+	    			<b class="sub_heading">Cisco CSR</b>
+	    			<br>
+	    			Giving back to society is one of the most important things. It is a corporate social responsibility. <a href="http://csr.cisco.com/">This</a> group helps achieve that.
+	    		</p>
+    		</div>
 		</div>
 	</body>
 </html>
