--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I am currently working as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair, Inc.</a> in Boston. I work on the recommendations team, specifically product recommendations. My work entails using intelligent business logic and Data Science models to provide reliable recommendations to the users, thereby enhancing their online shopping experience. 
+	    			I am currently working as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair.</a> in Boston. I work on the recommendations team, specifically product recommendations. My work entails using intelligent business logic and Data Science models to provide reliable recommendations to the users, thereby enhancing their online shopping experience. 
 	    			<br><br> 
 	    			
-	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time there, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Mr. Shankar Vembu</a>. I was also the TA for the courses of <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time there, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was also the TA for the courses of <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
