--- a/programming.html
+++ b/programming.html
@@ -14,14 +14,12 @@
 	    		<li><a href="misc.html">Misc</a>&nbsp</li>
 			</ul>
 		</nav>
-		
-		<!-- <marquee class="marki"> Website under maintenance </marquee> -->
 		<br><br>
 		
 		<div class="container">
-			<h2>#include...</h2>
+			<h2>Just some other things</h2>
 			<p>
-				Ever since I was first introduced to competitive programming, it's like I'm in an infinite loop doing it. I have taken part in plenty of programming contests, including the ACM ICPC and Google Code Jam. I am active on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. You can find some of my code <a href="https://github.com/akuls/code">here</a>. I have won few accolades in this area.
+				I constantly take part in competitve programming contests, and I enjoy doing so. Over the years, I have participated in the ACM ICPC, Google Code Jam, and the like. I am active on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. You can find some of my code <a href="https://github.com/akuls/code">here</a>. I have a few memorable moments in this journey.
 				<ul>
 					<li><a href="https://icpc.baylor.edu/">ACM ICPC</a>: Our team qualified for the Onsite Asia Regional Finals in 2013 held at IIT Kharagpur and Amritapuri (Dec 2013)</li>
 					
