--- a/misc.html
+++ b/misc.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<ul>
 				<li> 
-					<p>I like to travel a lot and also try out different restaurants. I review those after, and you can follow me here if you're interested.</p>
+					<p>I like to travel a lot and also visit different restaurants. I review those after, and you can follow me here if you're interested.</p>
 					<a title="View Akul S's food journey on Zomato!" href="https://www.zomato.com/users/akul-s-4500871"><img alt="View my food journey on Zomato!" src="https://www.zomato.com/widgets/user_widget_img.php?user_id=4500871" width="215"></a>
 				</li>
 				<li>
