--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I am currently working as a Software Engineer at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair.</a> in Boston. I work on the recommendations team, specifically product recommendations. My work entails using intelligent business logic and Data Science models to provide reliable recommendations to the users, thereby enhancing their online shopping experience. 
+	    			I am currently working as a Software Engineer on the Recommendation Systems team at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA. I develop large scale systems which use a mix of business logic/ML driven models to provide reliable recommendations to users, thereby enhancing their online shopping experience. 
 	    			<br><br> 
 	    			
 	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time there, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was also the TA for the courses of <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
-	    			I previously worked at <a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> as a Software Engineer, on the Production Support team. Here, I worked on building an Intelligent Capacity Management System, and thereby aid proactive decision making in Infrastructure allocation/de-allocation, to accomodate for the peak/dip in requests.
+	    			Prior to that, I worked as an SDE at <a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> in Bangalore, India. Here, I worked on developing an automated Capacity Management System to handle unexpected infrastructure needs.
 
 	    			<br><br>
 
-	    			These are my <a href="projects.html">projects</a> which you can take a look at. Besides these, I am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>.
+	    			Apart from work, I play badminton professionally, and run daily 5Ks. Besides those, I am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I like to solve combinatorial or any sort of mathematical problem. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">this</a> might be interesting!
 
 	    			<br><br>
 	    			You can get in touch with me on  <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a>, <a href = "mailto:akul911@gmail.com">email</a>, or just <a href="https://twitter.com/acoolswamy">tweet</a> to me.
