--- a/about.html
+++ b/about.html
@@ -52,15 +52,15 @@
 
 	    			<br><br>
 
-	    			<b class="sub_heading">MHRD Scholarship</b>
+	    			<b class="sub_heading">MHRD Scholarship Recipient</b>
 	    			<br>
 	    			<a href="http://mhrd.gov.in/">MHRD</a>, Bangalore, India | 2011-2015
 
 	    			<br><br>
 
-	    			<b class="sub_heading">Certified Handwriting Analyst</b>
+	    			<b class="sub_heading">Certified Handwriting Analyst (Level 5)</b>
 	    			<br>
-	    			<a href="http://handwritingindia.com/">HII</a>, Bangalore, India | 2010
+	    			<a href="https://handwritinguniversity.com/members/">Handwriting Institute India</a>, Bangalore, India | 2010
 	    		</p>
     		</div>
     		<div class="col_2_rt">
@@ -72,13 +72,13 @@
 	    			<br>
 	    			<a href="https://www.wayfair.com/">Wayfair</a> | July 2018 - Present
 	    			
-	    			<br><br><br>
+	    			<br><br>
 
 	    			<b class="sub_heading">Software Engineer</b>
 	    			<br>
 	    			Production Support 
 	    			<br>
-	    			<a href="http://www.cisco.com/c/en/us/index.html">Cisco Sytems</a> | Jul 2015 - Jul 2016
+	    			<a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> | July 2015 - July 2016
 	    		</p>
 
 	    		<br>
@@ -93,7 +93,7 @@
 
 	    			<b class="sub_heading">Cisco CSR</b>
 	    			<br>
-	    			Giving back to society is one of the most important things. It is a corporate social responsibility. <a href="http://csr.cisco.com/">This</a> group helps achieve that.
+	    			Giving back to society is one of the most important things. <a href="http://csr.cisco.com/">This</a> group helps achieve that.
 	    		</p>
     		</div>
 		</div>
