--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
 		<br><br>
 		
 		<div class="container">
-			<h2>Background</h2>
+			<h2>Technical Background</h2>
 			<p>
-				I'm a <a href="https://en.wikipedia.org/wiki/Bangalore">Bangalore</a>an born and bred. I spent the first 23 years of my life in this city, and I love it. I enjoy cooking, running, competitive programming, badminton, and trekking/hiking. I am an Internationally Certified Handwriting Analyst from <a href="http://handwritingindia.com/">Handwriting Institute India</a>. You can download my CV <a href="https://drive.google.com/file/d/1hPQT6EWbNPqSTeTI7X0A6xtDRb_x0WoX/view?usp=sharing">here</a>.
+				TLDR; You can download my CV <a href="https://drive.google.com/file/d/1hPQT6EWbNPqSTeTI7X0A6xtDRb_x0WoX/view?usp=sharing">here</a>.
 			</p>
     		<div class="col_2_lt">
     			<h2>EDUCATION</h2>
