--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>Home</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<script type="text/javascript">
+<!-- 		<script type="text/javascript">
 			function getTime()
 			{
 				document.getElementById("time").innerHTML = (new Date()).getTime();
 				setTimeout("getTime()", 0);
 			}
-		</script>
+		</script> -->
 	</head>
 	<body onload = "getTime()">
 		<h1><a href="http://akuls.github.io">Akul Siddalingaswamy</a></h1>
@@ -28,7 +28,7 @@
 		<div class="container">
     		<div class="main_page_left">
         		<img src = "images/self_4.jpg" width="65%" height="65%"><br>
-				<h3 id="time"></h3>
+<!-- 			<h3 id="time"></h3> -->
     		</div>
     		<div class="main_page_right">
 	    		<p> 
