--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I am currently working as a Software Engineer on the Recommendation Systems team at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA. I develop large scale systems which use a mix of business logic/ML driven models to provide reliable recommendations to users, thereby enhancing their online shopping experience. 
+	    			I am currently working as a Software Engineer on the Recommendation Systems team at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA. I help build large scale systems to productionize business logic/ML recommendation models. 
 	    			<br><br> 
 	    			
-	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time there, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was also the TA for the courses of <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time here, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was also the TA for the courses <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
@@ -43,7 +43,7 @@
 
 	    			<br><br>
 
-	    			Apart from work, I play badminton professionally, and run daily 5Ks. Besides those, I am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I like to solve combinatorial or any sort of mathematical problem. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">this</a> might be interesting!
+	    			Besides these, I play badminton professionally, run daily 5Ks, and go on high altitude treks. I also am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I like to solve combinatorial or any sort of mathematical problem. If you do as well, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">this</a> might be interesting!
 
 	    			<br><br>
 	    			You can get in touch with me on  <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a>, <a href = "mailto:akul911@gmail.com">email</a>, or just <a href="https://twitter.com/acoolswamy">tweet</a> to me.
