--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 	    			<br><br>
 
-	    			Besides these, I play badminton professionally, run daily 5Ks, and go on high altitude treks. I also am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I like to solve combinatorial or any sort of mathematical problem. If you do as well, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">this</a> might be interesting!
+	    			Besides these, I play badminton professionally, run daily 5Ks, and go on high altitude treks. I also am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I am interested in number theory and solving related problems. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">here</a>!
 
 	    			<br><br>
 	    			You can get in touch with me on  <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a>, <a href = "mailto:akul911@gmail.com">email</a>, or just <a href="https://twitter.com/acoolswamy">tweet</a> to me.
