--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 		<div class="container">
 			<h2>Technical Background</h2>
 			<p>
-				TLDR; You can download my CV <a href="https://drive.google.com/file/d/1hPQT6EWbNPqSTeTI7X0A6xtDRb_x0WoX/view?usp=sharing">here</a>.
+				FOr a gist, you can download my CV <a href="https://drive.google.com/file/d/1hPQT6EWbNPqSTeTI7X0A6xtDRb_x0WoX/view?usp=sharing">here</a>.
 			</p>
     		<div class="col_2_lt">
     			<h2>EDUCATION</h2>
