--- a/misc.html
+++ b/misc.html
@@ -25,11 +25,12 @@
 		<div class="container">
 			<ul>
 				<li> 
-					<p>I like to travel a lot and also visit different restaurants. I review those after, and you can follow me here if you're interested.</p>
+<!-- 					<p>I like to visit different restaurants and also review them afterwards. You can follow me here if you're interested.</p> -->
 					<a title="View Akul S's food journey on Zomato!" href="https://www.zomato.com/users/akul-s-4500871"><img alt="View my food journey on Zomato!" src="https://www.zomato.com/widgets/user_widget_img.php?user_id=4500871" width="215"></a>
 				</li>
 				<li>
-					I also try to write about the places I visit and/or things on my mind. Check them out <a href="https://akulsblog.wordpress.com/author/akulswamy/"> here</a>!
+					More things to come.
+<!-- 					I also try to write about the places I visit and/or things on my mind. Check them out <a href="https://akulsblog.wordpress.com/author/akulswamy/"> here</a>! -->
 				</li>
 			</ul>
 		</div>
