--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I am currently working as a Software Engineer on the Recommendation Systems team at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA. I help build large scale systems to productionize business logic/ML recommendation models. 
+	    			I am currently working as a Software Engineer on the Recommendation Systems team at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA. I help build large scale systems to productionize business logic/ML/DL recommendation models. 
 	    			<br><br> 
 	    			
 	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time here, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was also the TA for the courses <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
