--- a/index.html
+++ b/index.html
@@ -28,25 +28,23 @@
 		<div class="container">
     		<div class="main_page_left">
         		<img src = "images/yosemite.jpg" width="65%" height="65%"><br>
-			<h3 id="time">Last updated: July 8, 2019</h3>
+			<h3 id="time">Last updated: Sep 1st, 2019</h3>
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I am currently working as a Software Engineer on the Recommendation Systems team at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA. I help build large scale systems to productionize business logic/ML/DL recommendation models. 
+	    			I am currently working as a Software Engineer at Google in Mountain View, California.
+
+	    			Before Google, I was on the Recommendation Systems team at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA. I help build large scale systems to productionize business logic/ML/DL recommendation models. 
 	    			<br><br> 
 	    			
 	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time here, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was also the TA for the courses <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
-	    			Prior to that, I worked as an SDE at <a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> in Bangalore, India. Here, I worked on developing an automated Capacity Management System to handle unexpected infrastructure needs.
-
-	    			<br><br>
-
 	    			Besides these, I play badminton professionally, run daily 5Ks, and go on high altitude treks. I also am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I am interested in number theory and solving related problems. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">here</a>!
 
 	    			<br><br>
-	    			You can get in touch with me on  <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a>, <a href = "mailto:akul911@gmail.com">email</a>, or just <a href="https://twitter.com/acoolswamy">tweet</a> to me.
+	    			You can get in touch with me via <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a>, <a href = "mailto:akul911@gmail.com">email</a>, or just <a href="https://twitter.com/acoolswamy">tweet</a> to me.
 	    		</p>
     		</div>
 		</div>
