--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="container">
     		<div class="main_page_left">
         		<img src = "images/yosemite.jpg" width="65%" height="65%"><br>
-			<h3 id="time">Last updated: Sep 1st, 2019</h3>
+			<h3 id="time">Last updated: Sept 1, 2019</h3>
     		</div>
     		<div class="main_page_right">
 	    		<p> 
