--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
 			<ul>
 	    		<li><a href="index.html">Home</a>&nbsp</li>
 	        	<li><a href="about.html">About</a>&nbsp</li>
-	        	<li><a href="programming.html">Programming</a>&nbsp</li>
-	    		<li><a href="misc.html">Misc</a>&nbsp</li>
+	        	<!-- <li><a href="programming.html">Programming</a>&nbsp</li>
+	    		<li><a href="misc.html">Misc</a>&nbsp</li> -->
 			</ul>
 		</nav>
 		
@@ -21,7 +21,7 @@
 		<div class="container">
 			<h2>Technical Background</h2>
 			<p>
-				For a gist, you can download my CV <a href="https://drive.google.com/file/d/1hPQT6EWbNPqSTeTI7X0A6xtDRb_x0WoX/view?usp=sharing">here</a>.
+				For a gist, you can download my CV <a href="https://drive.google.com/drive/folders/1awztgqIrZHMVshIYtKyNY5wCPrg_MErx?usp=sharing">here</a>.
 			</p>
     		<div class="col_2_lt">
     			<h2>EDUCATION</h2>
@@ -68,15 +68,23 @@
         		<p>
         			<b class="sub_heading">Software Engineer</b>
 	    			<br>
+	    			Search Infrastructure 
+	    			<br>
+	    			<a href="https://www.wayfair.com/">Google</a> | July 2019 - Present
+	    			
+	    			<br><br>
+
+        			<b class="sub_heading">Software Engineer</b>
+	    			<br>
 	    			Recommendation Systems 
 	    			<br>
-	    			<a href="https://www.wayfair.com/">Wayfair</a> | July 2018 - Present
+	    			<a href="https://www.wayfair.com/">Wayfair</a> | July 2018 - July 2019
 	    			
 	    			<br><br>
 
 	    			<b class="sub_heading">Software Engineer</b>
 	    			<br>
-	    			Production Support 
+	    			Production Systems 
 	    			<br>
 	    			<a href="http://www.cisco.com/c/en/us/index.html">Cisco Systems</a> | July 2015 - July 2016
 	    		</p>
