--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<ul>
 	    		<li><a href="index.html">Home</a>&nbsp</li>
 	        	<li><a href="about.html">About</a>&nbsp</li>
-	        	<li><a href="programming.html">Programming</a>&nbsp</li>
-	    		<li><a href="misc.html">Misc</a>&nbsp</li>
+	        	<!-- <li><a href="programming.html">Programming</a>&nbsp</li>
+	    		<li><a href="misc.html">Misc</a>&nbsp</li> -->
 			</ul>
 		</nav>
 		
@@ -28,20 +28,20 @@
 		<div class="container">
     		<div class="main_page_left">
         		<img src = "images/yosemite.jpg" width="65%" height="65%"><br>
-			<h3 id="time">Last updated: Sept 1, 2019</h3>
+			<h3 id="time">Last updated: May 20, 2020</h3>
     		</div>
     		<div class="main_page_right">
 	    		<p> 
-	    			I am currently working as a Software Engineer at Google in Mountain View, California.
+	    			I currently work as a Software Engineer at Google in Mountain View, California.
 
-	    			Before Google, I was on the Recommendation Systems team at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA where I helped build large scale systems to productionize business logic/ML/DL recommendation models. 
+	    			Before Google, I built Recommendation Systems at <a href="https://en.wikipedia.org/wiki/Wayfair">Wayfair</a> in Boston, MA.
 	    			<br><br> 
 	    			
-	    			I graduated with a Master's degree in Computer Science from UMass Amherst in May 2018. During my time here, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was also the TA for the courses <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
+	    			I received my Master's in Computer Science from UMass Amherst in May 2018. During my time here, I worked on a project for <a href="https://chanzuckerberg.com/">Chan Zuckerberg Initiative</a> under the guidance of <a href="https://people.cs.umass.edu/~mccallum/">Prof Andrew McCallum</a> and <a href="https://www.linkedin.com/in/shankarvembu/"> Dr. Shankar Vembu</a>. I was also the TA for the courses <i>CS611: Advanced Algorithms</i>, and <i>CS311: Introduction to Algorithms</i> under <a href="https://people.cs.umass.edu/~ramesh/Site/HOME.html">Prof Ramesh Sitaraman</a>.
 
 	    			<br><br>
 
-	    			Besides these, I play badminton professionally, run daily 5Ks, and go on high altitude treks. I also am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I am interested in number theory and solving related problems. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">here</a>!
+	    			Besides these, I play badminton professionally, run 5Ks, and go on high altitude treks. I also am an avid competitive programmer. You can look me up on <a href="https://www.codechef.com/users/akul_swamy">Codechef</a> and <a href="https://www.hackerrank.com/Akul_Swamy?hr_r=1">Hackerrank</a>. I am interested in number theory and solving related problems. If you do too, then <a href="https://www.hackerrank.com/contests/projecteuler/challenges">here</a>!
 
 	    			<br><br>
 	    			You can get in touch with me via <a href="https://www.linkedin.com/in/akul-s/">LinkedIn</a>, <a href = "mailto:akul911@gmail.com">email</a>, or just <a href="https://twitter.com/acoolswamy">tweet</a> to me.
