--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<div class="container">
     		<div class="main_page_left">
-        		<img src = "images/yosemite.jpg" width="65%" height="65%"><br>
+        		<img src = "images/island_1.jpg" width="65%" height="65%"><br>
 			<h3 id="time">Last updated: May 20, 2020</h3>
     		</div>
     		<div class="main_page_right">
